# MyAcadosProject

./: CMakeLists.txt
include/: mpc_wrapper.h  quadcopter_model_closedloop.py
src/: mpc_test.cpp  mpc_wrapper.cpp
